--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   "author": "ZURB <foundation@zurb.com>",
   "license": "MIT",
   "dependencies": {
-    "foundation-sites": "~6.4.4-rc1",
+    "foundation-sites": "~6.5.0-rc.1",
     "jquery": ">=3.3.1",
     "what-input": "^5.1.0",
-    "motion-ui": "~2.0.2"
+    "motion-ui": "~2.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
-    "browser-sync": "^2.24.4",
+    "browser-sync": "^2.24.5",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "^7.0.1",
@@ -40,9 +40,9 @@
     "rimraf": "^2.6.2",
     "style-sherpa": "^1.0.2",
     "vinyl-named": "^1.1.0",
-    "webpack": "^4.12.0",
+    "webpack": "^4.13.0",
     "webpack-stream": "^4.0.3",
-    "yargs": "^11.0.0"
+    "yargs": "^12.0.1"
   },
   "repository": {
     "type": "git",
